crates/rstest-bdd-macros/tests/ui/datatable_duplicate_attr.stderr
error: duplicate `#[datatable]` attribute
 --> tests/ui/datatable_duplicate_attr.rs:6:35
  |
6 | fn step(#[datatable] #[datatable] table: Vec<Vec<String>>) {}
  |                                   ^^^^^
